1.4.3.dev
-----------------

- issue #70 remove PYTHONDONTWRITEBYTECODE workaround now that
  virtualenv behaves properly (thanks g2p)

- merged tox-quickstart command, contributed by Marc Abramowitz, which
  generates a default tox.ini after asking a few questions

- fix #48 - win32 detection of pypy and other interpreters that are on PATH
  (thanks Gustavo Picon)

- fix grouping of index servers, it is now done by name instead of 
  indexserver url, allowing to use it to separate dependencies
  into groups even if using the same default indexserver.

- look for "tox.ini" files in parent dirs of current dir (closes #34)

- the "py" environment now by default uses the current interpreter
  (sys.executable) make tox' own setup.py test execute tests with it
  (closes #46)

- change tests to not rely on os.path.expanduser (closes #60),
  also make mock session return args[1:] for more precise checking (closes #61)
  thanks to Barry Warszaw for both.

1.4.2
-----------------

- fix some tests which fail if /tmp is a symlink to some other place
- "python setup.py test" now runs tox tests via tox :)
  also added an example on how to do it for your project.

1.4.1
-----------------

- fix issue41 better quoting on windows - you can now use "<" and ">" in
  deps specifications, thanks Chris Withers for reporting

1.4
-----------------

- fix issue26 - no warnings on absolute or relative specified paths for commands
- fix issue33 - commentchars are ignored in key-value settings allowing
  for specifying commands like: python -c "import sys ; print sys"
  which would formerly raise irritating errors because the ";"
  was considered a comment
- tweak and improve reporting
- refactor reporting and virtualenv manipulation 
  to be more accessible from 3rd party tools
- support value substitution from other sections
  with the {[section]key} syntax
- fix issue29 - correctly point to pytest explanation
  for importing modules fully qualified